Fixed visual error where large gaps and sizes of guages are changed due to text from the guages wrapping into the next line.

--- a/src/components/css/Dashboard.css
+++ b/src/components/css/Dashboard.css
@@ -157,6 +157,7 @@
   z-index: 10;
 }
 .guageText {
+  white-space: nowrap;
   text-align: center;
   font-size: 1.25vw;
   margin-bottom: 10%;
